Updated meta tags for better seo

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 	<head>
 		<meta charset='utf-8' />
 		<meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible' />
+		<meta name="description" content="EnteVarkala.com contains all about Varkala you need to know. You can find the best hotels, travel agencies, best places to visit in Varkala, normal fairs etc. and all kind of latest news of Varkala from here."/>
 		<title>EnteVarkala.com</title>	
-		
+		<meta name="keywords" content="EnteVarkala.com, entevarkala.com, varkala, hotels in varkala, facilities in varkala, varkala beach, varkala temple, tourist place in varkala, Hot place varkala"/>
 		<link rel="shortcut icon" href="favicon.ico" />
 		<link rel="apple-touch-icon" href="images/favicon.png" />
 		
